--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   },
   "dependencies": {
     "async-require": "^1.2.2",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.3",
     "mz": "^2.7.0",
+    "progress": "^2.0.0",
+    "stream-buffers": "^3.0.2",
     "syntax-error": "^1.4.0"
   },
   "engines": {
@@ -23,16 +28,11 @@
   },
   "devDependencies": {
     "acorn": "^6.0.0",
-    "body-parser": "^1.18.3",
     "chai": "^4.2.0",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.3",
     "extend": "^3.0.2",
     "mocha": "^6.0.2",
     "nodemon": "^1.17.5",
-    "progress": "^2.0.0",
     "sinon": "^7.2.7",
-    "stream-buffers": "^3.0.2"
   },
   "nodemonConfig": {
     "ignore": [
