--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "extend": "^3.0.2",
     "mocha": "^6.0.2",
     "nodemon": "^1.17.5",
-    "sinon": "^7.2.7",
+    "sinon": "^7.2.7"
   },
   "nodemonConfig": {
     "ignore": [
