--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atjs",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "SEAM PROJECT STUDIOS S,L",
   "license": "ISC",
   "main": "index.js",
@@ -20,18 +20,18 @@
     "mz": "^2.7.0",
     "progress": "^2.0.0",
     "stream-buffers": "^3.0.2",
-    "syntax-error": "^1.4.0"
+    "syntax-error": "^1.4.0",
+    "nodemon": "^1.17.5",
+    "extend": "^3.0.2",
+    "acorn": "^6.0.0"
   },
   "engines": {
     "node": ">=10.15.1",
     "npm": ">=5.6.0"
   },
   "devDependencies": {
-    "acorn": "^6.0.0",
     "chai": "^4.2.0",
-    "extend": "^3.0.2",
     "mocha": "^6.0.2",
-    "nodemon": "^1.17.5",
     "sinon": "^7.2.7"
   },
   "nodemonConfig": {
